<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleBeamTool</string>
    <string name="hello_world">Hello world!</string>
    <string name="span_label">Span</string>
    <string name="tribwidth_label">Trib Width</string>
    <string name="deadUDL_label">Dead(UDL)</string>
    <string name="liveUDL_label">Live(UDL)</string>
    <string name="deflnRatio_label">LL Defln L/</string>
    <string name="Mf_label">Mf =</string>
    <string name="Rf_label">Rf =</string>
    <string name="Ix_label">Ix \u2265</string>

    <string name="initialSpan">5.000</string>
    <string name="initialTrib">2.000</string>
    <string name="initialDead">2.50</string>
    <string name="initialLive">4.80</string>
    <string name="initialDeflnRatio">300</string>

    <string name="span_units_si">m</string>
    <string name="tribwidth_units_si">m</string>
    <string name="deadUDL_units_si">kPa</string>
    <string name="liveUDL_units_si">kPa</string>
    <string name="defln_units_si">mm</string>
    <string name="Mf_units_si">kNm</string>
    <string name="Rf_units_si">kN</string>
    <string name="Ix_units1_si">mm<sup><small>4</small></sup></string>



    <string name="span_units_imp">ft</string>
    <string name="tribwidth_units_imp">ft</string>
    <string name="deadUDL_units_imp">psf</string>
    <string name="liveUDL_units_imp">psf</string>
    <string name="defln_units_imp">in</string>
    <string name="Mf_units_imp">ft-k</string>
    <string name="Rf_units_imp">k</string>
    <string name="Ix_units1_imp">in<sup><small>4</small></sup></string>

    <string name="pref_dead_load_factor">Dead Load Factor</string>
    <string name="pref_live_load_factor">Live Load Factor</string>
    <string name="pref_youngs_modulus">Youngs Modulus E (MPa)</string>

    <string name="pref_default_dead_load_factor">1.25</string>
    <string name="pref_default_live_load_factor">1.50</string>
    <string name="pref_default_youngs_modulus">200000</string>

</resources>
