<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="dead_factor"
        android:title="@string/pref_dead_load_factor"
        android:defaultValue="@string/pref_default_dead_load_factor"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:numeric="decimal"
        android:maxLines="1" />

    <EditTextPreference
        android:key="live_factor"
        android:title="@string/pref_live_load_factor"
        android:defaultValue="@string/pref_default_live_load_factor"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:numeric="decimal"
        android:maxLines="1" />

    <EditTextPreference
        android:key="youngs_modulus"
        android:title="@string/pref_youngs_modulus"
        android:defaultValue="@string/pref_default_youngs_modulus"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:numeric="integer"
        android:maxLines="1" />



</PreferenceScreen>
