<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rfquerin.simplebeamtool.app.MainActivity"
    android:background="#373737"
    android:clickable="false">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:id="@+id/radioGroup"
        android:paddingBottom="5dp"
        android:layout_alignParentLeft="false">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Metric"
            android:id="@+id/radioButtonSI"
            android:checked="true"
            android:textColor="@android:color/white"
            android:onClick="radiobuttonClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Imperial"
            android:id="@+id/radioButtonIMP"
            android:checked="false"
            android:textColor="@android:color/white"
            android:onClick="radiobuttonClick" />
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/span_label"
        android:id="@+id/textViewSpanLabel"
        android:gravity="right"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="5"
        android:enabled="true"
        android:fadeScrollbars="true"
        android:editable="true"
        android:textColor="#c9c9c9"
        android:layout_toLeftOf="@+id/editTextSpan"
        android:layout_marginTop="20dp" />


    <!-- invisible element to prevent span field from being initially selected -->

    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="4"
        android:id="@+id/editTextSpan"
        android:text="@string/initialSpan"
        android:imeOptions="actionDone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:duplicateParentState="false"
        android:paddingBottom="2dp"
        android:layout_alignBaseline="@+id/textViewSpanLabel"
        android:gravity="right"
        android:editable="true"
        android:textColor="@android:color/white"
        android:selectAllOnFocus="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/span_units_si"
        android:id="@+id/textViewSpanUnits"
        android:layout_alignBaseline="@+id/editTextSpan"
        android:layout_toRightOf="@+id/editTextSpan"
        android:textColor="#c9c9c9"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tribwidth_label"
        android:id="@+id/textViewTribLabel"
        android:paddingTop="8dp"
        android:layout_below="@+id/textViewSpanLabel"
        android:layout_toLeftOf="@+id/editTextLive"
        android:textColor="#c9c9c9"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="4"
        android:id="@+id/editTextTrib"
        android:imeOptions="actionDone"
        android:gravity="right"
        android:fadeScrollbars="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@+id/textViewTribLabel"
        android:layout_alignBaseline="@+id/textViewTribLabel"
        android:text="@string/initialTrib"
        android:paddingBottom="2dp"
        android:layout_alignParentStart="false"
        android:textColor="@android:color/white"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tribwidth_units_si"
        android:id="@+id/textViewTribUnits"
        android:layout_toRightOf="@+id/editTextTrib"
        android:layout_alignBaseline="@+id/editTextTrib"
        android:textColor="#c9c9c9"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/deadUDL_label"
        android:id="@+id/textViewDeadLabel"
        android:gravity="right"
        android:layout_below="@+id/textViewTribLabel"
        android:layout_toLeftOf="@+id/editTextSpan"
        android:paddingTop="8dp"
        android:textColor="#c9c9c9"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="4"
        android:id="@+id/editTextDead"
        android:text="@string/initialDead"
        android:imeOptions="actionDone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="right"
        android:layout_alignBaseline="@+id/textViewDeadLabel"
        android:layout_toRightOf="@+id/textViewDeadLabel"
        android:textColor="@android:color/white"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/deadUDL_units_si"
        android:id="@+id/textViewDeadUnits"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/editTextDead"
        android:layout_toRightOf="@+id/editTextDead"
        android:textColor="#c9c9c9"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/liveUDL_label"
        android:id="@+id/textViewLiveLabel"
        android:layout_below="@+id/textViewDeadLabel"
        android:layout_toLeftOf="@+id/editTextDead"
        android:gravity="right"
        android:paddingTop="8dp"
        android:textColor="#c9c9c9"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="4"
        android:id="@+id/editTextLive"
        android:imeOptions="actionDone"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignBaseline="@+id/textViewLiveLabel"
        android:gravity="right"
        android:layout_toRightOf="@+id/textViewLiveLabel"
        android:text="@string/initialLive"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="2dp"
        android:textColor="@android:color/white"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/liveUDL_units_si"
        android:id="@+id/textViewLiveUnits"
        android:layout_alignStart="@+id/textViewDeadUnits"
        android:layout_alignBaseline="@+id/editTextLive"
        android:layout_toRightOf="@+id/editTextLive"
        android:textColor="#c9c9c9"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/deflnRatio_label"
        android:id="@+id/textViewDeflnLabel"
        android:layout_centerVertical="true"
        android:layout_below="@+id/textViewLiveLabel"
        android:paddingTop="8dp"
        android:layout_alignRight="@+id/textViewTribLabel"
        android:fadeScrollbars="true"
        android:gravity="right"
        android:textColor="#c9c9c9"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="4"
        android:id="@+id/editTextDeflnRatio"
        android:imeOptions="actionDone"
        android:text="@string/initialDeflnRatio"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="2dp"
        android:layout_alignBaseline="@+id/textViewDeflnLabel"
        android:layout_toRightOf="@+id/textViewDeflnLabel"
        android:layout_alignParentEnd="false"
        android:gravity="right"
        android:textColor="@android:color/white"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="16.6"
        android:id="@+id/textViewDefln"
        android:layout_alignStart="@+id/textViewTribUnits"
        android:layout_alignBaseline="@+id/editTextDeflnRatio"
        android:ems="2"
        android:fadeScrollbars="true"
        android:layout_toRightOf="@+id/editTextDeflnRatio"
        android:gravity="right"
        android:textColor="#c9c9c9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defln_units_si"
        android:id="@+id/textViewDeflnUnits"
        android:layout_marginTop="21dp"
        android:layout_alignBaseline="@+id/textViewDefln"
        android:layout_toRightOf="@+id/textViewDefln"
        android:gravity="right"
        android:textColor="#c9c9c9" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/Mf_label"
        android:id="@+id/textViewMomentLabel"
        android:gravity="right"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textViewDeflnLabel"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:textIsSelectable="false"
        android:layout_toLeftOf="@+id/textViewMoment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="10"
        android:id="@+id/textViewMoment"
        android:ems="5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:gravity="right"
        android:enabled="true"
        android:layout_alignBaseline="@+id/textViewMomentLabel"
        android:textStyle="bold"
        android:fadeScrollbars="true"
        android:paddingRight="8dp"
        android:textColor="@android:color/white"
        android:layout_toLeftOf="@+id/textViewMomentUnits" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Mf_units_si"
        android:id="@+id/textViewMomentUnits"
        android:layout_alignBaseline="@+id/textViewMoment"
        android:textColor="@android:color/white"

        android:layout_alignLeft="@+id/textViewLiveUnits" />






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Rf_label"
        android:id="@+id/textViewRxnLabel"
        android:layout_below="@+id/textViewMomentLabel"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="false"
        android:layout_alignRight="@+id/textViewMomentLabel"
        android:textIsSelectable="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="10"
        android:id="@+id/textViewReaction"
        android:ems="5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:gravity="right"
        android:enabled="true"
        android:layout_alignBaseline="@+id/textViewRxnLabel"
        android:textStyle="bold"
        android:fadeScrollbars="true"
        android:paddingRight="8dp"
        android:textColor="@android:color/white"
        android:layout_toLeftOf="@+id/textViewReactionUnits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Rf_units_si"
        android:id="@+id/textViewReactionUnits"
        android:layout_alignBaseline="@+id/textViewReaction"
        android:textColor="@android:color/white"
        android:layout_alignLeft="@+id/textViewMomentUnits" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Ix_label"
        android:id="@+id/textViewIxLabel"
        android:layout_below="@+id/textViewRxnLabel"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:layout_alignRight="@+id/textViewRxnLabel"
        android:textIsSelectable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="10"
        android:id="@+id/textViewIx"
        android:ems="5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:gravity="right"
        android:enabled="true"
        android:layout_alignBaseline="@+id/textViewIxLabel"
        android:textStyle="bold"
        android:fadeScrollbars="true"
        android:paddingRight="8dp"
        android:textColor="@android:color/white"
        android:layout_toLeftOf="@+id/textViewIxUnits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Ix_units1_si"
        android:id="@+id/textViewIxUnits"
        android:layout_alignBaseline="@+id/textViewIx"
        android:textColor="@android:color/white"
        android:layout_alignLeft="@+id/textViewReactionUnits" />






    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:id="@+id/buttonRefresh"
        android:onClick="refreshbuttonOnClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="60dp"
        android:textColor="@android:color/white"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="8dp"
        style="@android:style/Theme.Light"/>

</RelativeLayout>

